# DifFlexMM

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_tests.yml
difflexmm/: dynamics.py  energy.py  geometry.py  kinematics.py  loading.py  objective.py  plotting.py  utils.py
exp/damping_characterization_3dp_pla_shims/: damping_ratio.ipynb  notes.md
exp/hinge_characterization_3dp_pla_shims/: instron_data.ipynb  random_quads_8x8_compression.ipynb  stiffness_identification.ipynb
exp/quads_focusing_3dp_pla_shims/: design_svg.ipynb  experiment_vs_simulation.ipynb  tracking.ipynb
exp/quads_focusing_vs_protection_static_tuning_3dp_pla_shims/: design_svg.ipynb  experiment_vs_simulation.ipynb  tracking.ipynb
notebooks/: kagome_focusing_3dp_pla_shims.ipynb  quads_energy_splitting_3dp_pla_shims.ipynb  quads_focusing_3dp_pla_shims.ipynb  quads_focusing_3dp_pla_shims_random_initial_guess.ipynb  quads_focusing_3dp_pla_shims_restricted_space.ipynb  quads_focusing_3dp_pla_shims_simulation_time_effect.ipynb  quads_focusing_multi_input_3dp_pla_shims.ipynb  quads_focusing_vs_protection_static_tuning_3dp_pla_shims.ipynb  quads_spin_3dp_pla_shims.ipynb
problems/: hinge_characterization.py  kagome_focusing.py  quads_energy_splitting.py  quads_focusing.py  quads_focusing_multi_input.py  quads_focusing_restricted_space.py  quads_kinetic_energy_static_tuning.py  quads_spin.py  quads_static_protection.py  reference_design.py
scripts/: fabrication.py  pulse_RS.py
scripts/tracking/: damping_ratio.py  (+5 more)
tests/: test_difflexmm.py
videos/: README.md
