[tool.poetry]
name = "DifFlexMM"
version = "0.1.0"
description = "Differentiable Flexible Mechanical Metamaterials"
authors = ["Giovanni Bordiga <gbordiga@seas.harvard.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bertoldi-collab/DifFlexMM"
repository = "https://github.com/bertoldi-collab/DifFlexMM"
keywords = [
    "mechanical-metamaterials",
    "differentiable-physics",
    "automatic-differentiation",
    "inverse-design",
    "nonlinear-dynamics",
    "nonlinear-waves",
]

[tool.poetry.dependencies]
python        = ">=3.8,<3.12"
jax-md        = "^0.2.5"
nlopt         = "^2.7.1"
opencv-python = "^4.5.5"
pandas        = "^1.4.4"
matplotlib    = "^3.5.0"
SciencePlots  = "^1.0.9"
Shapely       = "^1.8.4"
ipykernel     = "^6.5.1"
ipywidgets    = "^7.6.5"
ipympl        = "^0.9.1"
tqdm          = "^4.62.3"

[tool.poetry.group.dev.dependencies]
pytest   = "^8.1"
autopep8 = "^2.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
